Update CSS blog

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -627,9 +627,111 @@ header{
 			margin-bottom: 30px;
 		}
 	}
+	.col-5.right-holder p{
+	    color: #d21e2b;
+	    font-weight: 600;
+	    font-size: 14px;
+	    margin-top: 2px;
+	}
 }
 .single-blog{
 	padding: 50px 0;
+
+		.col-lg-8.offset-lg-2.text-center .list-inline.mb-50{
+			li{
+
+				&:before{
+					font-family: 'Font Awesome 5 Free';
+					font-weight: 900;
+
+					-moz-osx-font-smoothing: grayscale;
+					-webkit-font-smoothing: antialiased;
+					display: inline-block;
+					font-style: normal;
+					font-variant: normal;
+					text-rendering: auto;
+					line-height: 1;
+					font-size: 15px;
+
+					margin-right: 5px;
+
+
+				}
+
+
+				&:nth-child(1){
+					&:before{
+						content: "\f007";
+					}
+
+				}
+
+
+				&:nth-child(2){
+					&:before{
+						content: "\f073";
+					}
+
+				}
+
+
+
+			}
+		}
+
+
+
+	.post-single-content{
+
+
+
+
+		h1{
+			font-size: 1.5rem;
+			margin-bottom: 5px;
+		}
+
+		ul{
+			padding:10px 0;
+			margin-left:10px;
+			li{
+				position:relative;
+				padding-bottom:5px;
+				line-height: 150%;
+
+				&:before{
+					content: "• ";
+					position:absolute;
+					left: -10px;
+				}
+			}
+		}
+
+
+		p, li, a, span{
+			font-size: 15px;
+			font-weight: 400;
+			line-height: 200%;
+		}
+
+		a{
+			color: inherit;
+
+			width: calc(100%);
+			background-image: linear-gradient(transparent calc(100% - 1px),#999 0px);
+			background-repeat: no-repeat;
+				background-size: 100% 100%;
+			transition: background-size 0.4s cubic-bezier(0.9,0,0.1,1);
+			&:hover{
+				background-size: 0% 100%;
+			}
+
+
+		}
+
+
+	}
+
 }
 
 // BLOG PAGE
